Again from scratch

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Splash"
-    android:background="@color/common_google_signin_btn_text_dark_default">
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    android:background="@color/white">
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/parking_cartoon"
+        android:visibility="visible"
+        android:fadingEdge="horizontal"
+        android:focusedByDefault="true"
+        android:elevation="2dp"/>
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
-        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
         android:text="PARKSMART"
-        android:textColor="@color/black"
+        android:textColor="#e01c1c"
+        android:layout_below="@+id/image"
         android:textSize="50dp"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="visible" />
 
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="182dp"
-        tools:ignore="MissingConstraints" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
