--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="edittext">#5f5cff</color>
+    <color name="login">#ffff25e6</color>
+    <color name="buttons">#470700</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 </resources>
