--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
+    android:background="#353b32">
+
+    <TextView
+        android:id="@+id/maintext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:fontFamily="sa"
+        android:text="PARKSMART"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        android:typeface="normal" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:layout_alignLeft="@id/button3"
+        android:layout_marginLeft="10dp"
+        android:text="Already have an account?"
+        android:textSize="12dp"
+        android:textColor="@color/white" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_below="@+id/maintext"
+        android:layout_marginTop="130dp"
+        android:layout_marginLeft="01dp"
+        android:background="@mipmap/ic_log_in" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="80dp"
-        android:fontFamily="sa"
-        android:text="PARKSMART"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:typeface="normal" />
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_marginTop="90dp"
-        android:layout_marginLeft="140dp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="99dp" />
+        android:layout_below="@+id/button4"
+        android:layout_alignRight="@+id/button4"
+        android:layout_marginRight="10dp"
+        android:text="Don't have an account?"
+        android:textSize="12dp"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SignUp"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="20dp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="197dp" />
+        android:layout_below="@+id/maintext"
+        android:layout_alignRight="@+id/maintext"
+        android:layout_marginRight="01dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="130dp"
+        android:background="@mipmap/ic_sign_up" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Skip Login"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="140dp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="427dp" />
-</LinearLayout>
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:text="Skip Login" />
+</RelativeLayout>
