--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,97 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp">
 
     <TextView
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PARKSMART"
-        android:layout_centerHorizontal="true"
-        android:textSize="30dp"
-        android:layout_marginTop="30dp"
-        android:textColor="#3F51B5"
-        android:layout_marginLeft="90dp"/>
+        android:text="SIGN UP"
+        android:textSize="55dp"
+        android:textColor="#ff6326"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/inputEmail"
-        android:layout_width="142dp"
-        android:layout_height="49dp"
-        android:layout_alignParentTop="true"
-
-        android:layout_marginTop="139dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signup"
+        android:layout_marginTop="80dp"
         android:hint="Username"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="127dp" />
+        android:textSize="20dp"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#737271"/>
 
     <EditText
         android:id="@+id/inputPassword"
-        android:layout_width="194dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/inputEmail"
-        android:layout_marginTop="198dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/inputEmail"
         android:hint="Choose Password"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="191dp" />
+        android:textSize="20dp"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#737271"/>
 
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="148dp"
-        android:layout_height="37dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="204dp"
-        android:layout_marginStart="94dp"
-        android:text="Disabled?"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="284dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/inputPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Are you Physically challenged?"
+        android:textSize="20dp" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/radioButton"
-            android:layout_width="59dp"
-            android:layout_height="33dp"
-            android:layout_alignParentBottom="true"
-
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="159dp"
-            android:layout_marginStart="86dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Yes"
-            tools:layout_editor_absoluteX="136dp"
-            tools:layout_editor_absoluteY="326dp" />
+            android:textSize="15dp"/>
 
         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/radioButton"
-            android:layout_marginEnd="115dp"
             android:text="No"
-            tools:layout_editor_absoluteX="206dp"
-            tools:layout_editor_absoluteY="327dp" />
+            android:layout_marginLeft="20dp"
+            android:textSize="15dp" />
     </RadioGroup>
 
-        <Button
-            android:id="@+id/sign_up_button"
-            android:layout_width="133dp"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="79dp"
-            android:text="Submit"
-            tools:layout_editor_absoluteX="146dp"
-            tools:layout_editor_absoluteY="427dp" />
+    <Button
+        android:id="@+id/sign_up_button"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_below="@+id/radioGroup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Submit"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/buttons"
+        android:background="@drawable/buttoncustom"/>
+
 
 </RelativeLayout>
